[gd_scene load_steps=4 format=1]

[ext_resource path="res://finances_full.gd" type="Script" id=1]
[ext_resource path="res://potential_background.png" type="Texture" id=2]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=3]

[node name="finances_full" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.0868835, 0.96879 )
transform/scale = Vector2( 0.0497991, 0.0634272 )
texture = ExtResource( 2 )

[node name="level_goal" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.175, 0.175 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = -29.0
margin/right = 131.0
margin/bottom = 10.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Level Goal:"
visible_characters = -1

[node name="level_goal_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = -23.0
margin/right = 310.0
margin/bottom = 75.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="income" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = -3.0
margin/right = 77.0
margin/bottom = 31.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Income:"
visible_characters = -1

[node name="income_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = -3.0
margin/right = 38.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="expenses" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 8.0
margin/right = 100.0
margin/bottom = 68.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Expenses:"
visible_characters = -1

[node name="expenses_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 8.0
margin/right = 41.0
margin/bottom = 76.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="cash" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 20.0
margin/right = 50.0
margin/bottom = 54.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Cash:"
visible_characters = -1

[node name="cash_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -14.0
margin/top = 20.0
margin/right = 37.0
margin/bottom = 88.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="marketshare" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = 20.0
margin/right = 176.0
margin/bottom = 73.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Satisfaction:"
visible_characters = -1

[node name="marketshare_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 20.0
margin/right = 73.0
margin/bottom = 88.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="sales_made" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -3.0
margin/right = 151.0
margin/bottom = 50.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sales Made:"
visible_characters = -1

[node name="sales_made_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = -3.0
margin/right = 72.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="sales_lost" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = 8.0
margin/right = 147.0
margin/bottom = 42.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sales Lost:"
visible_characters = -1

[node name="sales_lost_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.18 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 8.0
margin/right = 72.0
margin/bottom = 76.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1


